--- a/css/test.css
+++ b/css/test.css
@@ -6,11 +6,21 @@ body {
     padding: 0;
 }
 
+h1 {
+    text-align: center;
+    font-size: 4em;
+}
+
 .gallery {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
     gap: 10px;
     padding: 20px;
+    justify-content: center;
+}
+
+.gallery img {
+    margin: 0 auto;
 }
 
 .thumbnail {
