--- a/css/test.css
+++ b/css/test.css
@@ -4,6 +4,26 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-image: linear-gradient(
+        151deg,
+        hsl(34.96, 100%, 45.1%) 0%,
+        hsl(34.73, 97%, 45.81%) 8.1%,
+        hsl(34.82, 94.24%, 46.53%) 15.5%,
+        hsl(35.16, 91.7%, 47.25%) 22.5%,
+        hsl(35.72, 89.38%, 47.96%) 29%,
+        hsl(36.44, 87.28%, 48.66%) 35.3%,
+        hsl(37.26, 85.38%, 49.33%) 41.2%,
+        hsl(38.14, 83.68%, 49.98%) 47.1%,
+        hsl(39.04, 84.12%, 50.58%) 52.9%,
+        hsl(39.92, 84.65%, 51.14%) 58.8%,
+        hsl(40.74, 85.16%, 51.64%) 64.7%,
+        hsl(41.47, 85.64%, 52.08%) 71%,
+        hsl(42.09, 86.05%, 52.44%) 77.5%,
+        hsl(42.57, 86.38%, 52.71%) 84.5%,
+        hsl(42.87, 86.59%, 52.88%) 91.9%,
+        hsl(42.98, 86.67%, 52.94%) 100%
+    );
+    height: 100vh;
 }
 
 h1 {
@@ -41,7 +61,7 @@ h1 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.8); /* Semi-transparent overlay */
+    background: rgba(240, 114, 31, 0.6); /* Semi-transparent overlay */
     justify-content: center;
     align-items: center;
     z-index: 9999; /* Ensure overlay is above all other elements */
